# solana-tx-toolkit

./: .gitignore  Cargo.toml  README.md
crates/tx-optimizer/: Cargo.toml
crates/tx-optimizer/src/: bundle.rs  config.rs  lib.rs  main.rs  priority_fee.rs
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: BundleBuilder.tsx  BundleHistory.tsx  BundleTimeline.tsx  FeeChart.tsx  FeeExplorer.tsx  FeeStats.tsx  Header.tsx  RouteVisualizer.tsx  Sidebar.tsx  StatusBar.tsx  StrategySelector.tsx  SwapDetails.tsx  SwapOptimizer.tsx  TipSlider.tsx  TokenSelector.tsx  TransactionMonitor.tsx  TxEventLog.tsx  TxTable.tsx  TxTimeline.tsx  WhyMe.tsx
dashboard/src/data/: mockBundles.ts  mockFees.ts  mockSwaps.ts  mockTransactions.ts
docs/: index.html
docs/dashboard/: index.html
docs/dashboard/assets/: index-95TXxuek.js  index-B5ynh-dd.js  index-BbuhRMEH.css  index-CCPNy_1t.js  index-CF674Ufa.js  index-Cjt1PAvm.css  index-QeaN7jc7.css  index-x9RVF8MK.css
docs/plans/: 2026-02-19-portfolio-showcase-design.md  2026-02-19-portfolio-showcase-plan.md
examples/: bundle-transactions.rs  optimize-swap.ts
programs/tx-vault/: Cargo.toml
programs/tx-vault/src/: lib.rs
tasks/: todo.md
ts/: package.json
ts/src/: index.ts  jupiter-swap.ts  monitor.ts  types.ts
