[package]
name = "solana-tx-optimizer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Priority fee estimation and Jito bundle optimization for Solana transactions"

[[bin]]
name = "tx-optimizer"
path = "src/main.rs"

[dependencies]
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bs58 = "0.5"
bincode = "1.3"

[dev-dependencies]
tokio-test = "0.4"
